--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -859,4 +859,8 @@
     <string name="automatic_logchar_cleanup_summary_off">All LogChar reports will be cached indefinitely</string>
     <string name="automatic_logchar_cleanup_title">Automatically wipe saved LogChar reports</string>
     <string name="cleaned_logchar_reports">Cleaned saved LogChar reports</string>
+    <string name="title_activity_bottomnavtest">bottomnavtest</string>
+    <string name="title_home">Home</string>
+    <string name="title_dashboard">Dashboard</string>
+    <string name="title_notifications">Notifications</string>
 </resources>
